--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,3 @@
-title=Title
-appTitle = App Title
-appDescription=App Description
+title=SAP Community Tags
+appTitle = SAP Community Tags
+appDescription=App for displaying all SAP Community Tags
