--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,7 @@
 title=SAP Community Tags
 appTitle = SAP Community Tags
 appDescription=App for displaying all SAP Community Tags
+
+dialogClose=Close
+qrCodeSubHeader=Scan this barcode to open the app on your smartphone or tablet
+qrCodeTitle=QR Code
